--- a/.gitmodules
+++ b/.gitmodules
@@ -1,135 +1,135 @@
 [submodule "bundle/vim-colors-solarized"]
 	path = bundle/vim-colors-solarized
-	url = https://github.com/altercation/vim-colors-solarized.git
+	url = git@github.com:altercation/vim-colors-solarized.git
 [submodule "bundle/zencoding.vim"]
 	path = bundle/zencoding.vim
-	url = https://github.com/mattn/zencoding-vim.git
+	url = git@github.com:mattn/zencoding-vim.git
 [submodule "bundle/vim-markdown-preview"]
 	path = bundle/vim-markdown-preview
-	url = https://github.com/robgleeson/vim-markdown-preview
+	url = git@github.com:robgleeson/vim-markdown-preview
 [submodule "bundle/vim-erlang"]
 	path = bundle/vim-erlang
-	url = https://github.com/oscarh/vimerl.git
+	url = git@github.com:oscarh/vimerl.git
 [submodule "bundle/vim-coffee-script"]
 	path = bundle/vim-coffee-script
-	url = https://github.com/grayrest/vim-coffee-script.git
+	url = git@github.com:grayrest/vim-coffee-script.git
 [submodule "bundle/VimClojure"]
 	path = bundle/VimClojure
-	url = https://github.com/vim-scripts/VimClojure.git
+	url = git@github.com:vim-scripts/VimClojure.git
 [submodule "bundle/ruby-refactor"]
 	path = bundle/ruby-refactor
-	url = https://github.com/ecomba/vim-ruby-refactoring.git
+	url = git@github.com:ecomba/vim-ruby-refactoring.git
 [submodule "bundle/vim-surround"]
 	path = bundle/vim-surround
-	url = https://github.com/tpope/vim-surround.git
+	url = git@github.com:tpope/vim-surround.git
 [submodule "bundle/vim-slurper"]
 	path = bundle/vim-slurper
 	url = git@github.com:rweald/slurper.vim.git
 [submodule "bundle/vim-javascript"]
 	path = bundle/vim-javascript
-	url = https://github.com/pangloss/vim-javascript.git
+	url = git@github.com:pangloss/vim-javascript.git
 [submodule "bundle/vim-slim"]
 	path = bundle/vim-slim
-	url = https://github.com/bbommarito/vim-slim.git
+	url = git@github.com:bbommarito/vim-slim.git
 [submodule "bundle/jslint-vim"]
 	path = bundle/jslint-vim
-	url = https://github.com/joestelmach/javaScriptLint.vim.git
+	url = git@github.com:joestelmach/javaScriptLint.vim.git
 [submodule "vim-handlebars"]
 	path = vim-handlebars
-	url = https://github.com/nono/vim-handlebars.git
+	url = git@github.com:nono/vim-handlebars.git
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
-	url = https://github.com/scrooloose/nerdtree.git
+	url = git@github.com:scrooloose/nerdtree.git
 [submodule "bundle/matchit-vim"]
 	path = bundle/matchit-vim
-	url = https://github.com/edsono/vim-matchit.git
+	url = git@github.com:edsono/vim-matchit.git
 [submodule "bundle/bundler-vim"]
 	path = bundle/bundler-vim
-	url = https://github.com/tpope/vim-bundler.git
+	url = git@github.com:tpope/vim-bundler.git
 [submodule "bundle/fugitive-vim"]
 	path = bundle/fugitive-vim
-	url = https://github.com/tpope/vim-fugitive.git
+	url = git@github.com:tpope/vim-fugitive.git
 [submodule "bundle/autotag-vim"]
 	path = bundle/autotag-vim
-	url = https://github.com/marcus/autotag.vim.git
+	url = git@github.com:marcus/autotag.vim.git
 [submodule "bundle/scala-vim"]
 	path = bundle/scala-vim
-	url = https://github.com/rosstimson/scala-vim-support.git
+	url = git@github.com:rosstimson/scala-vim-support.git
 [submodule "bundle/vim-haml"]
 	path = bundle/vim-haml
-	url = https://github.com/tpope/vim-haml.git
+	url = git@github.com:tpope/vim-haml.git
 [submodule "bundle/vim-pig"]
 	path = bundle/vim-pig
 	url = git@github.com:rweald/pig.vim.git
 [submodule "bundle/vim-pasta"]
 	path = bundle/vim-pasta
-	url = https://github.com/sickill/vim-pasta.git
+	url = git@github.com:sickill/vim-pasta.git
 [submodule "bundle/vim-powerline"]
 	path = bundle/vim-powerline
-	url = https://github.com/Lokaltog/vim-powerline.git
+	url = git@github.com:Lokaltog/vim-powerline.git
 [submodule "bundle/vim-mru"]
 	path = bundle/vim-mru
-	url = https://github.com/vim-scripts/mru.vim.git
+	url = git@github.com:vim-scripts/mru.vim.git
 [submodule "bundle/vim-ctrlp"]
 	path = bundle/vim-ctrlp
-	url = https://github.com/kien/ctrlp.vim.git
+	url = git@github.com:kien/ctrlp.vim.git
 [submodule "bundle/vim-session"]
 	path = bundle/vim-session
-	url = https://github.com/xolox/vim-session.git
+	url = git@github.com:xolox/vim-session.git
 [submodule "bundle/vim-bufonly"]
 	path = bundle/vim-bufonly
-	url = https://github.com/duff/vim-bufonly.git
+	url = git@github.com:duff/vim-bufonly.git
 [submodule "bundle/vim-markdown"]
 	path = bundle/vim-markdown
-	url = https://github.com/plasticboy/vim-markdown.git
+	url = git@github.com:plasticboy/vim-markdown.git
 [submodule "bundle/vim-align"]
 	path = bundle/vim-align
-	url = https://github.com/vim-scripts/Align.git
+	url = git@github.com:vim-scripts/Align.git
 [submodule "bundle/vim-snipmate"]
 	path = bundle/vim-snipmate
-	url = https://github.com/garbas/vim-snipmate.git
+	url = git@github.com:garbas/vim-snipmate.git
 [submodule "bundle/vim-tlib"]
 	path = bundle/vim-tlib
-	url = https://github.com/tomtom/tlib_vim.git
+	url = git@github.com:tomtom/tlib_vim.git
 [submodule "bundle/vim-addon-mw-utils"]
 	path = bundle/vim-addon-mw-utils
-	url = https://github.com/MarcWeber/vim-addon-mw-utils.git
+	url = git@github.com:MarcWeber/vim-addon-mw-utils.git
 [submodule "bundle/vim-supertab"]
 	path = bundle/vim-supertab
-	url = https://github.com/ervandew/supertab.git
+	url = git@github.com:ervandew/supertab.git
 [submodule "bundle/vim-fugitive"]
 	path = bundle/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive.git
+	url = git@github.com:tpope/vim-fugitive.git
 [submodule "bundle/vim-latex"]
 	path = bundle/vim-latex
-	url = https://github.com/kevinstreit/VIM-Latex.git
+	url = git@github.com:kevinstreit/VIM-Latex.git
 [submodule "bundle/nerdcommenter"]
 	path = bundle/nerdcommenter
-	url = https://github.com/scrooloose/nerdcommenter.git
+	url = git@github.com:scrooloose/nerdcommenter.git
 [submodule "bundle/ruby-matchit"]
 	path = bundle/ruby-matchit
-	url = https://github.com/vim-scripts/ruby-matchit.git
+	url = git@github.com:vim-scripts/ruby-matchit.git
 [submodule "bundle/vim-ruby"]
 	path = bundle/vim-ruby
-	url = https://github.com/vim-ruby/vim-ruby.git
+	url = git@github.com:vim-ruby/vim-ruby.git
 [submodule "bundle/vim-endwise"]
 	path = bundle/vim-endwise
-	url = https://github.com/tpope/vim-endwise.git
+	url = git@github.com:tpope/vim-endwise.git
 [submodule "bundle/snipmate-snippets"]
 	path = bundle/snipmate-snippets
 	url = git@github.com:rweald/snipmate-snippets.git
 [submodule "bundle/vim-scala"]
 	path = bundle/vim-scala
-	url = https://github.com/derekwyatt/vim-scala.git
+	url = git@github.com:derekwyatt/vim-scala.git
 [submodule "bundle/vim-sql-utilities"]
 	path = bundle/vim-sql-utilities
-	url = https://github.com/vim-scripts/SQLUtilities.git
+	url = git@github.com:vim-scripts/SQLUtilities.git
 [submodule "vim-change-sql-case"]
 	path = vim-change-sql-case
-	url = https://github.com/vim-scripts/changesqlcase.vim.git
+	url = git@github.com:vim-scripts/changesqlcase.vim.git
 [submodule "bundle/vim-change-sql-case"]
 	path = bundle/vim-change-sql-case
-	url = https://github.com/vim-scripts/changesqlcase.vim.git
+	url = git@github.com:vim-scripts/changesqlcase.vim.git
 [submodule "bundle/vim-ag"]
 	path = bundle/vim-ag
 	url = git@github.com:rking/ag.vim.git
